# ATPESC-codes

./: .gitignore  CMakeLists.txt  Makefile  README.md  source_cooley_plotfile_tools.sh
AMReX_Advection_AmrCore/: README
AMReX_Advection_AmrCore/Exec/: Make.Adv
AMReX_Advection_AmrCore/Exec/SingleVortex/: AMReX_AmrMesh.cpp  GNUmakefile  GNUmakefile_vis  Make.package  inputs  mkmovie.sh  mp4_to_gif.sh  plot.py  visit_vis_script.py
AMReX_Advection_AmrCore/Exec/SingleVortexProjected/: GNUmakefile  inputs
AMReX_Advection_AmrCore/Source/: AdvanceLevel.cpp  AdvancePhiAllLevels.cpp  AdvancePhiAtLevel.cpp  AdvancePhiNoSubcycling.cpp  AmrCoreAdv.H  AmrCoreAdv.cpp  DefineVelocity.cpp  Kernels.H  Make.package  mac_project_velocity.cpp  main.cpp  make_eb_geometry.cpp
AMReX_Advection_AmrCore/Source/Src_2d/: Adv_2d.f90
AMReX_Advection_AmrCore/Source/Src_K/: Adv_K.H  Make.package  compute_flux_2D_K.H  compute_flux_3D_K.H
AMReX_Amr101/Exec/: GNUmakefile  Make.Adv  inputs  paraview_amr101.py
AMReX_Amr101/Source/: AmrCoreAdv.cpp
AMReX_Amr102/: DefineVelocity.cpp  EB_Cylinder.cpp  FluidParticleContainer.H  FluidParticleContainer.cpp  GNUmakefile  Make.package  MyParticleContainer.H  MyParticleContainer.cpp  initial_particles_3d  inputs  inputs_3d  main.cpp
AMReX_Amr102/Exec/: GNUmakefile  GNUmakefile_from_source  Make.Amr  inputs  paraview_amr102.py  paraview_vis_amr102.py
AMReX_Amr102/Source/: FluidParticleContainer.H  FluidParticleContainer.cpp  Make.package  mac_project_velocity.cpp  main.cpp
AMReX_EB_MacProj/: EB_MacProj_Plots.ipynb  GNUmakefile  GNUmakefile_from_source  Make.package  MyParticleContainer.H  MyParticleContainer.cpp  README  TracerParticleContainer.H  TracerParticleContainer.cpp  initial_particles_3d  inputs  inputs_2d  inputs_3d  main.cpp  makeparticlefile.py  makeparticlefile_2d.py  makeparticlefile_3d.py  paraview_vis_script.py  plot.py  tracers_file  tracers_file_2d  tracers_file_3d  writeEBsurface.H  writeEBsurface.cpp
AMReX_EB_MacProj/tmp_build_dir/d/2d.gnu.MPI.EXE/: f90.depends
AMReX_EB_MacProj/tmp_build_dir/f/2d.gnu.MPI.EXE/: F90PP-AMReX_ABec_2D.F90  F90PP-AMReX_ABec_UTIL.F90  F90PP-AMReX_EBAmrUtil_nd.F90  F90PP-AMReX_EBFluxRegister_2d.F90  F90PP-AMReX_EBFluxRegister_nd.F90  F90PP-AMReX_EBMultiFabUtil_2d.F90  F90PP-AMReX_EBMultiFabUtil_nd.F90  F90PP-AMReX_EB_Tagging.F90  F90PP-AMReX_EB_bc_fill_nd.F90  F90PP-AMReX_EB_geometry.F90  F90PP-AMReX_EB_levelset_F.F90  F90PP-AMReX_FILCC_2D.F90  F90PP-AMReX_FLUXREG_nd.F90  F90PP-AMReX_FillPatchUtil_2d.F90  F90PP-AMReX_INTERP_2D.F90  F90PP-AMReX_KDTree_2d.F90  F90PP-AMReX_LO_2D.F90  F90PP-AMReX_LO_UTIL.F90  F90PP-AMReX_LP_2D.F90  F90PP-AMReX_MG_2D.F90  F90PP-AMReX_MLEBABecLap_2d.F90  F90PP-AMReX_MLLinOp_nd.F90  F90PP-AMReX_MLMG_2d.F90  F90PP-AMReX_MLNodeLap_2d.F90  F90PP-AMReX_MLNodeLap_nd.F90  F90PP-AMReX_compute_normals.F90  F90PP-AMReX_eb2_2d.F90  F90PP-AMReX_ebcellflag_mod.F90  F90PP-AMReX_ebinterp_2d.F90  F90PP-AMReX_filcc_mod.F90  F90PP-AMReX_fort_mod.F90  F90PP-AMReX_lo_bctypes_mod.F90
AMReX_EB_Pachinko/: GNUmakefile  GNUmakefile_from_source  GNUmakefile_libamrex  Make.package  MyParticleContainer.H  MyParticleContainer.cpp  README  eb_to_pvf.F90  inputs  inputs_2d  inputs_3d  main.cpp  makeparticlefile_2d.py  paraview_pachinko.py  paraview_vis_script.py  plot.py  tracers_file_2d
Advection/: Advection.cpp  Advection.h  CMakeLists.txt  inputs
Advection-Diffusion/: Advection-Diffusion.cpp  Advection-Diffusion.h  README.md  inputs
Diffusion/: CMakeLists.txt  Diffusion.cpp  Diffusion.h  inputs
GrayScott/: CMakeLists.txt  DiffOp.h  DiffOp2D.cpp  GrayScott.cpp  GrayScott.h  Makefile  README.md  Reactions.h  inputs
NVector_Multifab/: Makefile  NVector_Multifab.cpp  NVector_Multifab.h
SUNDIALS+AMReX/: Advection-Diffusion.cpp  Advection-Diffusion.h  CMakeLists.txt  HandsOn.hpp  HandsOn1.cpp  HandsOn1.h  HandsOn2.cpp  HandsOn2.h  HandsOn3.cpp  HandsOn3.h  HandsOn_main.cpp  Makefile  README.md  diag_tools.py  inputs  inputs-1  inputs-1b  inputs-1c  inputs-1d  inputs-2  inputs-2c  inputs-2d  inputs-2e  inputs-3  inputs-3a  inputs-3b  inputs-3c  inputs-ref  plot_log.py  process_ARKStep_diags.py
SUNDIALS+AMReX/Advection-Diffusion/: Advection-Diffusion.cpp  CMakeLists.txt  inputs
SUNDIALS+AMReX/GrayScott/: CMakeLists.txt  GrayScott.cpp
SUNDIALS+AMReX/reference_solution/: Header
SUNDIALS+AMReX/reference_solution/Level_0/: Cell_D_00000  Cell_D_00001  Cell_D_00002  Cell_D_00003  Cell_H
SUNDIALS+AMReX/shared/: NVector_Multifab.h  Reactions.cpp  RhsOp.cpp  RhsOp.h  Utilities.cpp  Utilities.h
TAO-of-AMReX/: AMReX_BCUtil.cpp  GNUmakefile  MyTest.H  MyTest.cpp  MyTestPlotfile.cpp  README.md  boundary_control.cpp  initProb.cpp  inputs  main.cpp  out.txt
amrex-plotfile-example/: GNUmakefile  README.md
shared/: CMakeLists.txt  DiffOp.h  DiffOp2D.cpp  NVector_Multifab.cpp
